--- a/catalog.html
+++ b/catalog.html
@@ -20,10 +20,53 @@
                <img src="./assets/icon/Logo_Apriori-dark.svg" alt="" />
             </div>
             <ul class="nav-buttons">
-               <li><img src="./assets/icon/nav-1-dark.svg" alt="" /></li>
-               <li><img src="./assets/icon/nav-2-dark.svg" alt="" /></li>
-               <li><img src="./assets/icon/nav-3-dark.svg" alt="" /></li>
-               <li><img src="./assets/icon/nav-4-dark.svg" alt="" /></li>
+               <li>
+                  <a href="">
+                     <svg class="svg-burger-icon pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D" />
+                        <path
+                           d="M23.3174 13.5C28.7393 13.5 33.1347 17.8954 33.1347 23.3174C33.1347 28.7394 28.7393 33.1348 23.3174 33.1348C17.8954 33.1348 13.5 28.7394 13.5 23.3174C13.5 17.8954 17.8954 13.5 23.3174 13.5Z"
+                           stroke="#1D1D1D"
+                        />
+                        <path d="M30.3555 30.3574L34.998 35" stroke="#1D1D1D" />
+                     </svg>
+                  </a>
+               </li>
+               <li>
+                  <a href=""
+                     ><svg class="svg-burger-icon pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D" />
+                        <path
+                           fill-rule="evenodd"
+                           clip-rule="evenodd"
+                           d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                           stroke="#1D1D1D"
+                           stroke-miterlimit="10"
+                        />
+                     </svg>
+                  </a>
+               </li>
+               <li>
+                  <a href=""
+                     ><svg class="svg-burger-icon pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D" />
+                        <path
+                           d="M14.9186 29.6624L13.5643 18.5H34.4357L33.0814 29.6624C32.7464 32.4235 30.4028 34.5 27.6214 34.5H20.3786C17.5972 34.5 15.2536 32.4235 14.9186 29.6624Z"
+                           stroke="#1D1D1D"
+                        />
+                        <path d="M30 23V19.5C30 16.1863 27.3137 13.5 24 13.5V13.5C20.6863 13.5 18 16.1863 18 19.5V23" stroke="#1D1D1D" />
+                     </svg>
+                  </a>
+               </li>
+               <li>
+                  <a href=""
+                     ><svg class="svg-burger-icon pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D" />
+                        <path d="M34.5 35C34.5 29.4772 29.5228 25.5 24 25.5C18.4772 25.5 13.5 29.4772 13.5 35" stroke="#1D1D1D" />
+                        <circle class="head-header-icon" cx="24" cy="19.5" r="6" stroke="#1D1D1D" />
+                     </svg>
+                  </a>
+               </li>
             </ul>
          </nav>
          <nav class="burger-nav-menu">
@@ -37,10 +80,53 @@
                   <img style="width: 140px" src="./assets/icon/logo-footer-small-blk-update.svg" alt="logo" />
                </div>
                <ul class="nav-buttons">
-                  <li><img src="./assets/icon/nav-1-dark.svg" alt="" /></li>
-                  <li><img src="./assets/icon/nav-2-dark.svg" alt="" /></li>
-                  <li><img src="./assets/icon/nav-3-dark.svg" alt="" /></li>
-                  <li><img src="./assets/icon/nav-4-dark.svg" alt="" /></li>
+                  <li>
+                     <a href="">
+                        <svg class="svg-burger-icon pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D" />
+                           <path
+                              d="M23.3174 13.5C28.7393 13.5 33.1347 17.8954 33.1347 23.3174C33.1347 28.7394 28.7393 33.1348 23.3174 33.1348C17.8954 33.1348 13.5 28.7394 13.5 23.3174C13.5 17.8954 17.8954 13.5 23.3174 13.5Z"
+                              stroke="#1D1D1D"
+                           />
+                           <path d="M30.3555 30.3574L34.998 35" stroke="#1D1D1D" />
+                        </svg>
+                     </a>
+                  </li>
+                  <li>
+                     <a href=""
+                        ><svg class="svg-burger-icon pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D" />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M32.7236 17.4022C30.3551 14.8659 26.4443 14.8659 24.0207 17.4022C21.5971 14.8659 17.7413 14.8659 15.3177 17.4022C12.8941 19.9386 12.8941 23.9736 15.3177 26.5099L24.0207 34.5L32.7236 26.5099C35.0921 23.9736 35.0921 19.9386 32.7236 17.4022Z"
+                              stroke="#1D1D1D"
+                              stroke-miterlimit="10"
+                           />
+                        </svg>
+                     </a>
+                  </li>
+                  <li>
+                     <a href=""
+                        ><svg class="svg-burger-icon pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D" />
+                           <path
+                              d="M14.9186 29.6624L13.5643 18.5H34.4357L33.0814 29.6624C32.7464 32.4235 30.4028 34.5 27.6214 34.5H20.3786C17.5972 34.5 15.2536 32.4235 14.9186 29.6624Z"
+                              stroke="#1D1D1D"
+                           />
+                           <path d="M30 23V19.5C30 16.1863 27.3137 13.5 24 13.5V13.5C20.6863 13.5 18 16.1863 18 19.5V23" stroke="#1D1D1D" />
+                        </svg>
+                     </a>
+                  </li>
+                  <li>
+                     <a href=""
+                        ><svg class="svg-burger-icon pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle opacity="0.48" cx="24" cy="24" r="23.5" stroke="#1D1D1D" />
+                           <path d="M34.5 35C34.5 29.4772 29.5228 25.5 24 25.5C18.4772 25.5 13.5 29.4772 13.5 35" stroke="#1D1D1D" />
+                           <circle class="head-header-icon" cx="24" cy="19.5" r="6" stroke="#1D1D1D" />
+                        </svg>
+                     </a>
+                  </li>
                </ul>
             </nav>
             <div class="hidden-nav-menu">
