--- a/home.html
+++ b/home.html
@@ -313,8 +313,15 @@
             </ul>
          </nav>
          <div class="header-slider-buttons">
-            <img class="header-slider-buttons_prev" src="./assets/icon/Button.svg" alt="" />
-            <img class="header-slider-buttons_next" src="./assets/icon/Button.svg" alt="" />
+            <svg class="header-slider-buttons_prev header-icon-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+               <circle cx="24" cy="24" r="23.5" stroke="white" stroke-opacity="0.48" />
+               <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="white" />
+            </svg>
+
+            <svg class="header-slider-buttons_next header-icon-hover" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+               <circle cx="24" cy="24" r="23.5" stroke="white" stroke-opacity="0.48" />
+               <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="white" />
+            </svg>
          </div>
       </header>
       <main>
@@ -329,7 +336,10 @@
                         <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                         <p class="line_line"></p>
                      </div>
-                     <img src="./assets/icon/Button.svg" alt="" />
+                     <svg class="header-icon-hover pointer shrink" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="24" cy="24" r="23.5" stroke="white" stroke-opacity="0.48" />
+                        <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="white" />
+                     </svg>
                   </div>
                </div>
                <div class="bg-block-correct-position catalog-home-block-2">
@@ -340,7 +350,10 @@
                         <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                         <p class="line_line"></p>
                      </div>
-                     <img src="./assets/icon/Button.svg" alt="" />
+                     <svg class="header-icon-hover pointer shrink" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="24" cy="24" r="23.5" stroke="white" stroke-opacity="0.48" />
+                        <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="white" />
+                     </svg>
                   </div>
                </div>
                <div class="bg-block-correct-position catalog-home-block-3">
@@ -351,7 +364,10 @@
                         <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                         <p class="line_line"></p>
                      </div>
-                     <img src="./assets/icon/Button.svg" alt="" />
+                     <svg class="header-icon-hover pointer shrink" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="24" cy="24" r="23.5" stroke="white" stroke-opacity="0.48" />
+                        <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="white" />
+                     </svg>
                   </div>
                </div>
                <div class="bg-block-correct-position catalog-home-block-4">
@@ -362,7 +378,10 @@
                         <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                         <p class="line_line"></p>
                      </div>
-                     <img src="./assets/icon/Button.svg" alt="" />
+                     <svg class="header-icon-hover pointer shrink" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="24" cy="24" r="23.5" stroke="white" stroke-opacity="0.48" />
+                        <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="white" />
+                     </svg>
                   </div>
                </div>
                <div class="last-block-in-catalog-goods-home">
@@ -374,7 +393,10 @@
                            <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                            <p class="line_line"></p>
                         </div>
-                        <img src="./assets/icon/Button.svg" alt="" />
+                        <svg class="header-icon-hover pointer shrink" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle cx="24" cy="24" r="23.5" stroke="white" stroke-opacity="0.48" />
+                           <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="white" />
+                        </svg>
                      </div>
                   </div>
                   <div class="bg-block-correct-position catalog-home-block-6">
@@ -385,7 +407,10 @@
                            <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                            <p class="line_line"></p>
                         </div>
-                        <img src="./assets/icon/Button.svg" alt="" />
+                        <svg class="header-icon-hover pointer shrink" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle cx="24" cy="24" r="23.5" stroke="white" stroke-opacity="0.48" />
+                           <path d="M23.4853 32.4853L31.9706 24M31.9706 24L23.4853 15.5147M31.9706 24H15" stroke="white" />
+                        </svg>
                      </div>
                   </div>
                   <div class="red-circle">Каталог</div>
