feat: footer hover updae all pages

--- a/home.html
+++ b/home.html
@@ -899,8 +899,8 @@
             <div class="footer_rignt__ul-box">
                <h5 class="footer-title">Интернет-магазин</h5>
                <ul class="footer-u-list">
-                  <li><a href="">Акции</a></li>
-                  <li><a href="">Дисконт</a></li>
+                  <li><a href="youtube.com">Акции</a></li>
+                  <li><a href="vk.com">Дисконт</a></li>
                   <li><a href="">Все товары</a></li>
                   <li><a href="">Лояльность</a></li>
                   <li><a href="">Доставка и оплата</a></li>
