--- a/basket.html
+++ b/basket.html
@@ -484,6 +484,23 @@
                         </div>
                         <div class="product-card_subdiscr">36 см | Настольная</div>
                      </div>
+                     <div class="red-cart-button-big pointer none">
+                        <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                           <path
+                              d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                              fill="white"
+                              stroke="white"
+                              stroke-width="2"
+                           />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                              fill="white"
+                           />
+                        </svg>
+                     </div>
                   </div>
 
                   <div class="product-card">
@@ -505,6 +522,23 @@
                            <p class="product-card_price">45 900 <span>₽</span></p>
                         </div>
                         <div class="product-card_subdiscr">89 см | Золотое</div>
+                     </div>
+                     <div class="red-cart-button-big pointer none">
+                        <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                           <path
+                              d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                              fill="white"
+                              stroke="white"
+                              stroke-width="2"
+                           />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                              fill="white"
+                           />
+                        </svg>
                      </div>
                   </div>
 
@@ -528,6 +562,23 @@
                         </div>
                         <div class="product-card_subdiscr">56 см | Фарфор</div>
                      </div>
+                     <div class="red-cart-button-big pointer none">
+                        <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                           <path
+                              d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                              fill="white"
+                              stroke="white"
+                              stroke-width="2"
+                           />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                              fill="white"
+                           />
+                        </svg>
+                     </div>
                   </div>
 
                   <div class="product-card">
@@ -549,6 +600,23 @@
                            <p class="product-card_price">16 800 <span>₽</span></p>
                         </div>
                         <div class="product-card_subdiscr">36 см | Настольная</div>
+                     </div>
+                     <div class="red-cart-button-big pointer none">
+                        <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                           <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                           <path
+                              d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                              fill="white"
+                              stroke="white"
+                              stroke-width="2"
+                           />
+                           <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                              fill="white"
+                           />
+                        </svg>
                      </div>
                   </div>
                </div>
@@ -577,6 +645,23 @@
                      <p class="viewed-product_price-sub"></p>
                   </div>
                   <div class="viewed-product_discont-value basket-sale none"></div>
+                  <div class="red-cart-button pointer none">
+                     <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                        <path
+                           d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                           fill="white"
+                           stroke="white"
+                           stroke-width="2"
+                        />
+                        <path
+                           fill-rule="evenodd"
+                           clip-rule="evenodd"
+                           d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                           fill="white"
+                        />
+                     </svg>
+                  </div>
                </div>
                <div class="viewed-product">
                   <img class="viewed-product_img" src="./assets/content/viewed-product-2.png" alt="" />
@@ -586,6 +671,23 @@
                      <p class="viewed-product_price-sub"></p>
                   </div>
                   <div class="viewed-product_discont-value basket-sale none">%</div>
+                  <div class="red-cart-button pointer none">
+                     <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                        <path
+                           d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                           fill="white"
+                           stroke="white"
+                           stroke-width="2"
+                        />
+                        <path
+                           fill-rule="evenodd"
+                           clip-rule="evenodd"
+                           d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                           fill="white"
+                        />
+                     </svg>
+                  </div>
                </div>
                <div class="viewed-product">
                   <img class="viewed-product_img" src="./assets/content/viewed-product-3.png" alt="" />
@@ -595,6 +697,23 @@
                      <p class="viewed-product_price-sub">9200 ₽</p>
                   </div>
                   <div class="viewed-product_discont-value basket-sale"><span>–</span>25<span>%</span></div>
+                  <div class="red-cart-button pointer none">
+                     <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                        <path
+                           d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                           fill="white"
+                           stroke="white"
+                           stroke-width="2"
+                        />
+                        <path
+                           fill-rule="evenodd"
+                           clip-rule="evenodd"
+                           d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                           fill="white"
+                        />
+                     </svg>
+                  </div>
                </div>
                <div class="viewed-product">
                   <img class="viewed-product_img" src="./assets/content/viewed-product-4.png" alt="" />
@@ -604,6 +723,23 @@
                      <p class="viewed-product_price-sub"></p>
                   </div>
                   <div class="viewed-product_discont-value basket-sale none"></div>
+                  <div class="red-cart-button pointer none">
+                     <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                        <path
+                           d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                           fill="white"
+                           stroke="white"
+                           stroke-width="2"
+                        />
+                        <path
+                           fill-rule="evenodd"
+                           clip-rule="evenodd"
+                           d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                           fill="white"
+                        />
+                     </svg>
+                  </div>
                </div>
             </div>
          </div>
