feat: font simmilar update

--- a/home.html
+++ b/home.html
@@ -848,7 +848,7 @@
                <div class="right-zone-review">
                   <div class="get-review">
                      <div class="leave-feedback-top-line">
-                        <div class="review_name">157 оценок</div>
+                        <div class="review_count">157 оценок</div>
                         <div class="feedback-middle-score">4,8</div>
                         <img src="./assets/icon/star-rectangle.svg" alt="" />
                      </div>
