feat: product items hover + basket button view/hide effect

--- a/product.html
+++ b/product.html
@@ -403,6 +403,23 @@
                            <p class="product-box__price___price">300 <span>₽</span></p>
                            <p class="product-box__price___price-old zero-opacity">10</p>
                         </div>
+                        <div class="red-cart-button-product pointer none">
+                           <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                              <path
+                                 d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                                 fill="white"
+                                 stroke="white"
+                                 stroke-width="2"
+                              />
+                              <path
+                                 fill-rule="evenodd"
+                                 clip-rule="evenodd"
+                                 d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                                 fill="white"
+                              />
+                           </svg>
+                        </div>
                      </div>
                      <div class="more-products-interior_product in-cart">
                         <img class="interior_product-box__img" src="./assets/content/interiour-dop-2.png" alt="" />
@@ -414,6 +431,23 @@
                            <p class="product-box__price___price">99 999<span>₽</span></p>
                            <p class="product-box__price___price-old opacity"><span>199 999</span> ₽</p>
                         </div>
+                        <div class="red-cart-button-product pointer none">
+                           <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                              <path
+                                 d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                                 fill="white"
+                                 stroke="white"
+                                 stroke-width="2"
+                              />
+                              <path
+                                 fill-rule="evenodd"
+                                 clip-rule="evenodd"
+                                 d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                                 fill="white"
+                              />
+                           </svg>
+                        </div>
                      </div>
                      <div class="more-products-interior_product">
                         <img class="interior_product-box__img" src="./assets/content/interiour-dop-3.png" alt="" />
@@ -424,6 +458,23 @@
                         <div class="interior_product-box__price">
                            <p class="product-box__price___price">29 800 <span>₽</span></p>
                            <p class="product-box__price___price-old opacity"><span>51 900</span> ₽</p>
+                        </div>
+                        <div class="red-cart-button-product pointer none">
+                           <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <circle cx="32" cy="32" r="32" fill="#FF5151" />
+                              <path
+                                 d="M21.315 27.8518C21.5544 25.6361 23.3651 24 25.4743 24H39.5257C41.6349 24 43.4456 25.6361 43.685 27.8518L44.9654 39.7045C45.3314 43.0932 42.7553 46 39.5177 46H25.4823C22.2447 46 19.6686 43.0932 20.0346 39.7045L21.315 27.8518Z"
+                                 fill="white"
+                                 stroke="white"
+                                 stroke-width="2"
+                              />
+                              <path
+                                 fill-rule="evenodd"
+                                 clip-rule="evenodd"
+                                 d="M26 20.4681C26 16.8959 28.9101 14 32.5 14C36.0899 14 39 16.8959 39 20.4681V30H36.9474V20.4681C36.9474 18.0239 34.9562 16.0426 32.5 16.0426C30.0438 16.0426 28.0526 18.0239 28.0526 20.4681V30H26V20.4681Z"
+                                 fill="white"
+                              />
+                           </svg>
                         </div>
                      </div>
                   </div>
