fix: circle menu on tom icon update V3

--- a/cabinet.html
+++ b/cabinet.html
@@ -13,7 +13,11 @@
       <header class="product-header">
          <nav class="home-nav-menu">
             <div class="burger-btn" onclick="toggleMenu()">
-               <img class="svg-class pointer" src="./assets/icon/nav-btn-dark.svg" alt="" />
+               <svg class="svg-class pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <rect x="12" y="31" width="16" height="1" fill="#1D1D1D" />
+                  <rect x="12" y="24" width="24" height="1" fill="#1D1D1D" />
+                  <rect x="12" y="17" width="20" height="1" fill="#1D1D1D" />
+               </svg>
                <p class="menu-text-black">Меню</p>
             </div>
             <div class="logo-icon">
@@ -73,7 +77,11 @@
             <!-- mt112 -->
             <nav class="home-nav-menu">
                <div class="burger-btn" onclick="toggleMenu()">
-                  <img class="svg-class" src="./assets/icon/nav-btn-dark.svg" alt="" />
+                  <svg class="svg-class pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                     <rect x="12" y="31" width="16" height="1" fill="#1D1D1D" />
+                     <rect x="12" y="24" width="24" height="1" fill="#1D1D1D" />
+                     <rect x="12" y="17" width="20" height="1" fill="#1D1D1D" />
+                  </svg>
                   <p class="menu-text-black">Меню</p>
                </div>
                <div class="logo-icon">
