feat: basket and cabinet filler update

--- a/cabinet.html
+++ b/cabinet.html
@@ -373,7 +373,7 @@
             </div>
             <div class="cabinet-zone cabinet-tab-2 none">
                <div class="orders">
-                  <h3 class="basket_title">Список ваших закаsjvklзов</h3>
+                  <h3 class="basket_title">Список ваших заказов</h3>
                   <div class="orders-tabs-overflow">
                      <div class="orders-tabs">
                         <p class="orders-tab pointer active">Все</p>
