--- a/product.html
+++ b/product.html
@@ -20,8 +20,8 @@
                </svg>
                <p class="menu-text-black">Меню</p>
             </div>
-            <div class="logo-icon">
-               <img src="./assets/icon/Logo_Apriori-dark.svg" alt="" />
+            <div class="logo-icon pointer">
+               <img src="./assets/icon/logo-footer-small-blk-update.svg" alt="" />
             </div>
             <ul class="nav-buttons">
                <li>
