feat: home buttons pag update to SVG element

--- a/home.html
+++ b/home.html
@@ -705,12 +705,19 @@
             </div>
             <div class="third-section-control-panel">
                <img class="mouse-swipe-img" src="./assets/icon/Frame 482379.svg" alt="" />
-               <div class="control-panel_pag-btns slider-switcher-hide pag-btn-s-view">
-                  <img class="control-panel_prev-btn unactive" src="./assets/icon/Button (7).svg" alt="" />
-                  <div class="pag-line">
+               <div class="control-panel_pag-btns slider-switcher-hide pag-btn-s-view pointer">
+                  <svg class="control-panel_prev-btn arrow-svg-btn unactive" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                     <circle cx="24" cy="24" r="23.5" stroke="#1D1D1D7e" />
+                     <path d="M23 32L31 24M31 24L23 16M31 24H15" stroke="#1D1D1D" />
+                  </svg>
+
+                  <div class="pag-line line-between-arrows none">
                      <p class="pag-line__pag-active"></p>
                   </div>
-                  <img class="control-panel_next-btn" src="./assets/icon/Button (7).svg" alt="" />
+                  <svg class="control-panel_next-btn arrow-svg-btn pointer" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                     <circle cx="24" cy="24" r="23.5" stroke="#1D1D1D7e" />
+                     <path d="M23 32L31 24M31 24L23 16M31 24H15" stroke="#1D1D1D" />
+                  </svg>
                </div>
             </div>
          </section>
